--- a/render.yaml
+++ b/render.yaml
@@ -7,4 +7,4 @@ services:
     envVars:
       - key: API_TOKEN
         sync: false
-    pythonVersion: 3.10.13
+    pythonVersion: 3.10.12  # <--- оставайся на этом, он точно работает
