--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
-  - type: background
-    name: cezura-worker
+  - type: worker
+    name: cezura
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python cezura_bot.py
     envVars:
       - key: API_TOKEN
         sync: false
-    pythonVersion: 3.13.4
+    pythonVersion: 3.10.13
