--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
-services:
-  - type: worker
-    name: cezura
-    env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python cezura_bot.py
-    envVars:
-      - key: API_TOKEN
-        sync: false
-    pythonVersion: 3.10.13
+envVars:
+  - key: API_TOKEN
+    value: "<токен вашего бота>"
+  - key: WEBHOOK_HOST
+    value: https://cezura.onrender.com
+  - key: PORT
+    value: "8000"
